# gllab

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  Engine.cpp  Engine.h  Engine.hpp  FrameBuffer.cpp  FrameBuffer.hpp  LICENSE  Makefile  Mesh.cpp  Mesh.hpp  Program  Program.cpp  Program.h  Program.hpp  README.md  Shader.cpp  Shader.h  Shader.hpp  Texture.cpp  Texture.hpp  Timer.h  UniformBuffer.hpp  VertexBuffer.cpp  VertexBuffer.h  common.h  gllab.hpp  main.cpp
assets/: depth_dump.frag  diffuse_lighting.frag  diffuse_lighting.vert  point_light.frag  point_light.vert  quad.vert  specular_lighting.frag  specular_lighting.vert  tex_dump.frag
assets/deferred_shading/: four_view.frag  pass1.frag  pass1.vert  pass2.frag  pass2.vert
assets/nature/: 1x1x1.mtl  3x3x3.mtl  nature.frag  nature.mtl  nature.tga  nature.vert
assets/planet/: planet.frag  planet.vert
assets/shadow_map/: pass1.frag  pass1.vert  pass2.frag  pass2.vert
core/: CMakeLists.txt  Camera.cpp  Camera.hpp  Component.hpp  Engine.cpp  Engine.hpp  FrameBuffer.cpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshFilter.cpp  MeshFilter.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Object.hpp  Program.cpp  Program.hpp  SceneObject.cpp  SceneObject.hpp  Shader.cpp  Texture.cpp  Texture.hpp  Timer.cpp  Timer.hpp  UniformBuffer.cpp  UniformBuffer.hpp
doc/gllab_tdd.pages/Metadata/: DocumentIdentifier  Properties.plist
engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Object.cpp  Scene.hpp  Timer.hpp  gllab.hpp
engine/core/: FrameBuffer.hpp  Program.cpp  Program.hpp  Shader.cpp  Shader.hpp  Texture.hpp  UniformBuffer.cpp  VertexBuffer.cpp  VertexBuffer.hpp  common.hpp
samples/: CMakeLists.txt  deferred_shading1.cpp  larger_scene.cpp  planet.cpp  shadow_map1.cpp
